src/index.css
body {
  --color-background: #fff;
  /* --color-foreground: rgba(0, 0, 0, 0.87); */
  --color-foreground: #000000de;
  --color-accent: #5a0c0c;
  --color-accent2: #b22222;
  --color-accent-background: #f59b9b;

  --color-link: var(--color-accent2);
  --color-link-hover: var(--color-accent);

  --button-size: 23px;
  /* As recommended by Apple and Google */
  --padding-min-mobile: 16px;

  background-color: var(--color-background);
  color: var(--color-foreground);
}
body.dark-mode {
  --color-background: #121212;
  /* --color-foreground: rgba(255, 255, 255, 0.87); */
  --color-foreground: #fffafade;
  --color-accent: #b22222;
  --color-accent2: #f59b9b;
  --color-accent-background: #5a0c0c;
}

body {
  margin: 0;
  padding: 0;
  font-family:
    Philosopher,
    Noto Sans,
    serif;
}

.newline {
  white-space: pre-line;
}

ul {
  padding-left: 0.75rem;
  margin: 0;
}

a {
  color: var(--color-link);
}

a,
[role="button"] {
  text-decoration: none;
  font-weight: bold;
  cursor: pointer;
}

a:hover,
button:hover,
[role="button"]:hover {
  color: var(--color-link-hover);
}

button {
  color: var(--color-foreground);
  padding: 0;
  border: none;
  background: none;
  text-align: center;
  font: inherit;
  font-weight: bold;
  text-decoration: none;
  cursor: pointer;
}

input {
  background-color: var(--color-background);
  color: var(--color-foreground);
  border: 1px solid var(--color-foreground);
  border-radius: 3px;
  padding: 0.3rem;
}
input:focus {
  outline: solid var(--color-link-hover);
  border-color: var(--color-link-hover);
}

hr {
  margin: 0.7rem 0;
  margin-block-start: 0.4em;
  margin-block-end: 0.4em;
}

h1 {
  font-size: 1rem;
  font-weight: bold;
  margin-block-start: 0;
  margin-block-end: 0;
}

h2 {
  font-size: 0.9rem;
  font-weight: bold;
}

.has-tooltip {
  font-style: italic;
  text-decoration: underline dotted;
}

@media (pointer: coarse), (hover: none) {
  [title]:not(a) {
    position: relative;
    display: inline-flex;
    justify-content: center;
  }
  [title]:not(a):hover::after {
    content: attr(title);
    position: absolute;
    z-index: 1200;
    top: 90%;
    width: fit-content;
    min-width: 15rem;
    padding: 3px;
    font-style: normal;
    color: var(--color-background);
    background-color: var(--color-accent2);
    border: 1px solid var(--color-background);
    border-radius: 3px;
  }
}

